--- a/Paper/Evaluating GraphColoring.tex
+++ b/Paper/Evaluating GraphColoring.tex
@@ -67,7 +67,7 @@ This paper evaluates features of graph coloring algorithms implemented on graphi
 term1, term2
 
 \keywords
-keyword1, keyword2
+Graph coloring, Parallel algorithm, CUDA
 
 \section{Introduction}
 
