--- a/trunk/Paper/Evaluating GraphColoring.tex
+++ b/trunk/Paper/Evaluating GraphColoring.tex
@@ -64,7 +64,7 @@ This paper evaluates features of graph coloring algorithms implemented on graphi
 \category{CR-number}{subcategory}{third-level}
 
 \terms
-term1, term2
+term1, term2, term3
 
 \keywords
 Graph coloring, Parallel algorithm, CUDA
