--- a/trunk/Paper/Evaluating GraphColoring.tex
+++ b/trunk/Paper/Evaluating GraphColoring.tex
@@ -262,7 +262,35 @@ msdoor & 417,792 & 9,912,536 & 76 & 46 \\
 ldoor & 958,464 & 22,785,136 & 76 & 46 \\
 
 \end{tabular}
-\caption{Anisotropic Mean Volume Process Timing}
+\caption{Information of tested graphs}
+\label{amean_time}
+\end{center}
+\end{table}
+
+
+\begin{table}
+\scriptsize
+\begin{center}
+\begin{tabular}{l r r r r}
+\hline
+Name & Colors  & Time  & Colors & Time \\
+ & FF & FF &   SDO$\&$LDO &  SDO$\&$LDO\\
+\\
+\hline
+ct20stif & 49 & 29 & 48 & 203387 \\
+nasasrb & 41 & 29 & 36 & 646113 \\
+pwtk  & 48 & 116 & 48 & 5000000 \\
+\\
+pkustk10 & 42 & 39 & 42 & 226838 \\
+pkustk11 & 57 & 48 & 51 & 250112 \\
+pkustk13 & 57 & 66 & 51 & 612960\\
+\\
+hood & 42 & 105 & 36  & 1709180 \\
+msdoor & 42 & 197 & 35 & 7281740 \\
+ldoor & 42 & 450,136 & 35 & 34584800 \\
+
+\end{tabular}
+\caption{Sequential coloring results for FF and SDO$\&$LDO}
 \label{amean_time}
 \end{center}
 \end{table}
